--- a/games.html
+++ b/games.html
@@ -5,18 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dustin Riley: Games</title>
+    <title>Dustin Riley</title>
     <link rel="stylesheet" href="styles.css">
-
+    <script src="index.js" defer></script>
 </head>
 <body>
-    <input type="checkbox" id="toggle">
-    <label for="toggle" id="menu">MENU ≡</label>
-    <label for="toggle" id="menuc">|-></label>
-    <nav>
-        <ul class="pages">
-            <div id="dropdown">
-                <a href="./index.html"><li>PORTFOLIO</li></a>
+    <div id="wrapper">
+        <button onclick="menu()" id="menu">MENU ≡</button>
+        <button onclick="menuc()" id="menuc">X</button>
+        <div id="nav">
+            <a href="./index.html">DUSTIN RILEY</a>
+            <div id="dropdown"><a href="./portfolio.html">PORTFOLIO</a>
                 <div id="dropdown-menu">
                     <a href="./java.html">JAVA</a>
                     <a href="./cpp.html">C++</a>
@@ -29,43 +28,39 @@
                     <a href="./assembly.html">ASSEMBLY</a>
                 </div>
             </div>
-            <a href="./apis.html"><li>APIS</li></a>
-            <a href="./games.html"><li class="active">GAMES</li></a>
-            <a href="./resume.html"><li>RESUME</li></a>
-        </ul>
-        <ul class="icons">
-            <li class="phone"><a href="tel:+13074014917"><img src="./img/phone.png" alt="phone"></a></li>
-            <li class="email"><a href="mailto: dustinrileywork@gmail.com"><img src="./img/email.png" alt="email"></a></li>
-            <li class="git"><a href="https://github.com/dustinbriley" target=”_blank”><img src="./img/github.png" alt="github"></a></li>
-        </ul>
-    </nav>
-    <div id="main">
-        <section>
-            <div>
-                <iframe frameborder="0" src="https://itch.io/embed-upload/7070228?color=333333" allowfullscreen="" width="280" height="495"><a href="https://dustinbriley.itch.io/space-ace-v3">Play Space Ace v3 on itch.io</a></iframe>
-                <p>currently a work in progress in GODOT</p>
-            </div>
-            <div id="mem">
-                <a href="https://dustinbriley.itch.io/memory"><h2>Memory</h2></a>
-                <a href="https://dustinbriley.itch.io/memory"><img src="./games/Memory.PNG" alt="Memory"></a>
-                <a href="https://dustinbriley.itch.io/memory"><h2>Download</h2></a>
-            </div>
-            <div id="sa2">
-                <a href="https://dustinbriley.itch.io/space-ace-v2"><h2>Space Ace v2</h2></a>
-                <a href="https://dustinbriley.itch.io/space-ace-v2"><img src="./games/ssv2.gif" alt="Space Ace v2"></a>
-                <a href="https://dustinbriley.itch.io/space-ace-v2"><h2>Download</h2></a>
-            </div>
-            <div id="sa1">
-                <a href="https://dustinbriley.itch.io/space-ace-v1"><h2>Space Ace v1</h2></a>
-                <a href="https://dustinbriley.itch.io/space-ace-v1"><img src="./games/ssv1.gif" alt="Space Ace v1"></a>
-                <a href="https://dustinbriley.itch.io/space-ace-v1"><h2>Download</h2></a>
-            </div>
-            <div id="av">
-                <a href="https://dustinbriley.itch.io/avoidance"><h2>Avoidance</h2></a>
-                <a href="https://dustinbriley.itch.io/avoidance"><img src="./games/avoid.gif" alt="Avoidance"></a>
-                <a href="https://dustinbriley.itch.io/avoidance"><h2>Download</h2></a>
-            </div>
-        </section>
+            <a href="./apis.html">APIS</a>
+            <a href="./games.html" class="active">GAMES</a>
+            <a href="./resume.html">RESUME</a>
+        </div>
+        <div id="toppad"></div>
+        <div id="main">
+            <section>
+                <div>
+                    <iframe frameborder="0" src="https://itch.io/embed-upload/7070228?color=333333" allowfullscreen="" width="280" height="495"><a href="https://dustinbriley.itch.io/space-ace-v3">Play Space Ace v3 on itch.io</a></iframe>
+                    <p>currently a work in progress in GODOT</p>
+                </div>
+                <div id="mem">
+                    <a href="https://dustinbriley.itch.io/memory"><h2>Memory</h2></a>
+                    <a href="https://dustinbriley.itch.io/memory"><img src="./games/Memory.PNG" alt="Memory"></a>
+                    <a href="https://dustinbriley.itch.io/memory"><h2>Download</h2></a>
+                </div>
+                <div id="sa2">
+                    <a href="https://dustinbriley.itch.io/space-ace-v2"><h2>Space Ace v2</h2></a>
+                    <a href="https://dustinbriley.itch.io/space-ace-v2"><img src="./games/ssv2.gif" alt="Space Ace v2"></a>
+                    <a href="https://dustinbriley.itch.io/space-ace-v2"><h2>Download</h2></a>
+                </div>
+                <div id="sa1">
+                    <a href="https://dustinbriley.itch.io/space-ace-v1"><h2>Space Ace v1</h2></a>
+                    <a href="https://dustinbriley.itch.io/space-ace-v1"><img src="./games/ssv1.gif" alt="Space Ace v1"></a>
+                    <a href="https://dustinbriley.itch.io/space-ace-v1"><h2>Download</h2></a>
+                </div>
+                <div id="av">
+                    <a href="https://dustinbriley.itch.io/avoidance"><h2>Avoidance</h2></a>
+                    <a href="https://dustinbriley.itch.io/avoidance"><img src="./games/avoid.gif" alt="Avoidance"></a>
+                    <a href="https://dustinbriley.itch.io/avoidance"><h2>Download</h2></a>
+                </div>
+            </section>
+        </div>
     </div>
 </body>
 </html>
