--- a/python.html
+++ b/python.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dustin Riley: Python</title>
+    <title>Dustin Riley</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="index.js" defer></script>
 </head>
 <body>
-    <input type="checkbox" id="toggle">
-    <label for="toggle" id="menu">MENU ≡</label>
-    <label for="toggle" id="menuc">|-></label>
-    <nav>
-        <ul class="pages">
-            <div id="dropdown">
-                <a href="./index.html"><li>PORTFOLIO</li></a>
+    <div id="wrapper">
+        <button onclick="menu()" id="menu">MENU ≡</button>
+        <button onclick="menuc()" id="menuc">X</button>
+        <div id="nav">
+            <a href="./index.html">DUSTIN RILEY</a>
+            <div id="dropdown"><a href="./portfolio.html">PORTFOLIO</a>
                 <div id="dropdown-menu">
                     <a href="./java.html">JAVA</a>
                     <a href="./cpp.html">C++</a>
@@ -28,55 +28,52 @@
                     <a href="./assembly.html">ASSEMBLY</a>
                 </div>
             </div>
-            <a href="./apis.html"><li>APIS</li></a>
-            <a href="./games.html"><li>GAMES</li></a>
-            <a href="./resume.html"><li>RESUME</li></a>
-        </ul>
-        <ul class="icons">
-            <li class="phone"><a href="tel:+13074014917"><img src="./img/phone.png" alt="phone"></a></li>
-            <li class="email"><a href="mailto: dustinrileywork@gmail.com"><img src="./img/email.png" alt="email"></a></li>
-            <li class="git"><a href="https://github.com/dustinbriley" target=”_blank”><img src="./img/github.png" alt="github"></a></li>
-        </ul>
-    </nav>
-    <div id="title">
-        <h1>Python Programs</h1>
-        <table>
-            <tr>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Preview</th>
-            </tr>
-            <tr>
-                <td><a href="https://github.com/DustinBRiley/Python-1" target="_blank">Woodchuck</a></td>
-                <td>Type Casting</td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
-            </tr>
-            <tr>
-                <td><a href="https://github.com/DustinBRiley/Python-2" target="_blank">Login</a></td>
-                <td>Conditionals, Loops, and Lists</td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
-            </tr>
-            <tr>
-                <td><a href="https://github.com/DustinBRiley/Python-3" target="_blank">Cars</a></td>
-                <td>Lists and Dictionaries</td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
-            </tr>
-            <tr>
-                <td><a href="https://github.com/DustinBRiley/Python-4" target="_blank">Story</a></td>
-                <td>Reading, Writing, and Editing files</td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
-            </tr>
-            <tr>
-                <td><a href="https://github.com/DustinBRiley/Unicode-Memory" target="_blank">Memory</a></td>
-                <td>Unicode Memory Game (with bruteforce protection)</td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
-            </tr>
-            <tr>
-                <td><a href="https://github.com/DustinBRiley/Tkinter-Memory" target="_blank">Memory</a></td>
-                <td>Tkinter Memory Game (with bruteforce protection)</td>
-                <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
-            </tr>
-        </table>
+            <a href="./apis.html">APIS</a>
+            <a href="./games.html">GAMES</a>
+            <a href="./resume.html">RESUME</a>
+        </div>
+        <div id="toppad"></div>
+        <div id="title">
+            <h1>Python Programs</h1>
+        </div>
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Description</th>
+                    <th>Preview</th>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/DustinBRiley/Python-1" target="_blank">Woodchuck</a></td>
+                    <td>Type Casting</td>
+                    <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/DustinBRiley/Python-2" target="_blank">Login</a></td>
+                    <td>Conditionals, Loops, and Lists</td>
+                    <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/DustinBRiley/Python-3" target="_blank">Cars</a></td>
+                    <td>Lists and Dictionaries</td>
+                    <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/DustinBRiley/Python-4" target="_blank">Story</a></td>
+                    <td>Reading, Writing, and Editing files</td>
+                    <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/DustinBRiley/Unicode-Memory" target="_blank">Memory</a></td>
+                    <td>Unicode Memory Game (with bruteforce protection)</td>
+                    <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/DustinBRiley/Tkinter-Memory" target="_blank">Memory</a></td>
+                    <td>Tkinter Memory Game (with bruteforce protection)</td>
+                    <td><a href="./img/code/" target="_blank"><img src="./img/code/" alt="Preview"></a></td>
+                </tr>
+            </table>
+        </div>
     </div>
 </body>
 </html>
