--- a/apis.html
+++ b/apis.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dustin Riley: APIs</title>
+    <title>Dustin Riley</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="index.js" defer></script>
 </head>
 <body>
-    <input type="checkbox" id="toggle">
-    <label for="toggle" id="menu">MENU ≡</label>
-    <label for="toggle" id="menuc">|-></label>
-    <nav>
-        <ul class="pages">
-            <div id="dropdown">
-                <a href="./index.html"><li>PORTFOLIO</li></a>
+    <div id="wrapper">
+        <button onclick="menu()" id="menu">MENU ≡</button>
+        <button onclick="menuc()" id="menuc">X</button>
+        <div id="nav">
+            <a href="./index.html">DUSTIN RILEY</a>
+            <div id="dropdown"><a href="./portfolio.html">PORTFOLIO</a>
                 <div id="dropdown-menu">
                     <a href="./java.html">JAVA</a>
                     <a href="./cpp.html">C++</a>
@@ -28,176 +28,177 @@
                     <a href="./assembly.html">ASSEMBLY</a>
                 </div>
             </div>
-            <a href="./apis.html"><li class="active">APIS</li></a>
-            <a href="./games.html"><li>GAMES</li></a>
-            <a href="./resume.html"><li>RESUME</li></a>
-        </ul>
-        <ul class="icons">
-            <li class="phone"><a href="tel:+13074014917"><img src="./img/phone.png" alt="phone"></a></li>
-            <li class="email"><a href="mailto: dustinrileywork@gmail.com"><img src="./img/email.png" alt="email"></a></li>
-            <li class="git"><a href="https://github.com/dustinbriley" target=”_blank”><img src="./img/github.png" alt="github"></a></li>
-        </ul>
-    </nav>
-    <div id="title">
-        <h1>States API</h1>
-        MVC style Node.js REST API using Express, Mongoose, and MongoDB<br>
-        Data also provided by JSON file<br>
-        <a href="https://github.com/DustinBRiley/BackendWebDev1Final" target="_blank">Github</a><br>
-        <a href="https://conscious-platinum-napkin.glitch.me" target="_blank">URL</a><br>
-        <table>
-            <tr>
-                <th>ROUTE</th>
-                <th>GET</th>
-            </tr>
-            <tr>
-                <td>/states/</td>
-                <td>All state data returned</td>
-            </tr>
-            <tr>
-                <td>/states/?contig=true</td>
-                <td>All state data for contiguous states (Not AK or HI)</td>
-            </tr>
-            <tr>
-                <td>/states/?contig=false</td>
-                <td>All state data for non-contiguous states (AK, HI)</td>
-            </tr>
-            <tr>
-                <td>/states/:state</td>
-                <td>All data for the state URL parameter</td>
-            </tr>
-            <tr>
-                <td>/states/:state/funfact</td>
-                <td>A random fun fact for the state URL parameter</td>
-            </tr>
-            <tr>
-                <td>/states/:state/capital</td>
-                <td>{ 'state': stateName, 'capital': capitalName }</td>
-            </tr>
-            <tr>
-                <td>/states/:state/nickname</td>
-                <td>{ 'state': stateName, 'nickname': nickname }</td>
-            </tr>
-            <tr>
-                <td>/states/:state/population</td>
-                <td>{ 'state': stateName, 'population': population }</td>
-            </tr>
-            <tr>
-                <td>/states/:state/admission</td>
-                <td>{ 'state': stateName, 'admitted': admissionDate }</td>
-            </tr>
-        </table>
-        <table>
-            <tr>
-                <th>ROUTE</th>
-                <th>POST/PATCH/DELETE</th>
-            </tr>
-            <tr>
-                <td>/states/:state/funfact</td>
-                <td>The result received from MongoDB</td>
-            </tr>
-        </table>
-        <h1>Quotes API</h1>
-        PHP OOP REST API using PostgreSQL on Render.com<br>
-        <a href="https://github.com/DustinBRiley/BackendWebDev1Midterm" target="_blank">Github</a><br>
-        <a href="https://backendwebdev1midterm.dustinbriley.repl.co/" target="_blank">URL</a><br>
-        <table>
-            <tr>
-                <th>ROUTE</th>
-                <th>GET</th>
-            </tr>
-            <tr>
-                <td>/api/quotes/</td>
-                <td>All quotes are returned</td>
-            </tr>
-            <tr>
-                <td>/api/quotes/?id=4</td>
-                <td>The specific quote</td>
-            </tr>
-            <tr>
-                <td>/api/quotes/?author_id=10</td>
-                <td>All quotes from author_id=10</td>
-            </tr>
-            <tr>
-                <td>/api/quotes/?category_id=8</td>
-                <td>All quotes in category_id=8</td>
-            </tr>
-            <tr>
-                <td>/api/quotes/?author_id=3&category_id=4</td>
-                <td>All quotes from authorId=3 that are in category_id=4</td>
-            </tr>
-            <tr>
-                <td>/api/authors/</td>
-                <td>All authors with their id</td>
-            </tr>
-            <tr>
-                <td>/api/authors/?id=5</td>
-                <td>The specific author with their id</td>
-            </tr>
-            <tr>
-                <td>/api/categories/</td>
-                <td>All categories with their ids (id, category)</td>
-            </tr>
-            <tr>
-                <td>/api/categories/?id=7</td>
-                <td>The specific category with its id</td>
-            </tr>
-        </table>
-        <table>
-            <tr>
-                <th>ROUTE</th>
-                <th>POST</th>
-                <th>PUT</th>
-                <th>DELETE</th>
-            </tr>
-            <tr>
-                <td>api/quotes/</td>
-                <td>created quote (id, quote, author_id, category_id)</td>
-                <td>updated quote (id, quote, author_id, category_id)</td>
-                <td>id of deleted quote</td>
-            </tr>
-            <tr>
-                <td>api/authors/</td>
-                <td>created author (id, author)</td>
-                <td>updated author (id, author)</td>
-                <td>id of deleted author</td>
-            </tr>
-            <tr>
-                <td>api/categories/</td>
-                <td>created category (id, category)</td>
-                <td>updated category (id, category)</td>
-                <td>id of deleted category</td>
-            </tr>
-        </table>
-        <h1>Products API</h1>
-        Python Flask SQLite REST API<br>
-        <a href="https://github.com/DustinBRiley/PythonFlaskAPI" target="_blank">Github</a><br>
-        <a href="https://silken-northern-buffet.glitch.me" target="_blank">URL</a><br>
-        <table>
-            <tr>
-                <th>ROUTE</th>
-                <th>GET</th>
-                <th>POST</th>
-            </tr>
-            <tr>
-                <td>/product</td>
-                <td>gets all products</td>
-                <td>creates new product (name, description, price, quantity JSON object required)</td>
-            </tr>
-        </table>
-        <table>
-            <tr>
-                <th>ROUTE</th>
-                <th>GET</th>
-                <th>PUT</th>
-                <th>DELETE</th>
-            </tr>
-            <tr>
-                <td>/product/:id</td>
-                <td>gets product by ID</td>
-                <td>updates existing product (name, description, price, quantity JSON object required)</td>
-                <td>deletes product by id</td>
-            </tr>
-        </table>
+            <a href="./apis.html" class="active">APIS</a>
+            <a href="./games.html">GAMES</a>
+            <a href="./resume.html">RESUME</a>
+        </div>
+        <div id="toppad"></div>
+        <div id="title">
+            <h1>States API</h1>
+            MVC style Node.js REST API using Express, Mongoose, and MongoDB<br>
+            Data also provided by JSON file<br>
+            <a href="https://github.com/DustinBRiley/BackendWebDev1Final" target="_blank">Github</a><br>
+            <a href="https://conscious-platinum-napkin.glitch.me" target="_blank">URL</a><br>
+        </div>
+            <table>
+                <tr>
+                    <th>ROUTE</th>
+                    <th>GET</th>
+                </tr>
+                <tr>
+                    <td>/states/</td>
+                    <td>All state data returned</td>
+                </tr>
+                <tr>
+                    <td>/states/?contig=true</td>
+                    <td>All state data for contiguous states (Not AK or HI)</td>
+                </tr>
+                <tr>
+                    <td>/states/?contig=false</td>
+                    <td>All state data for non-contiguous states (AK, HI)</td>
+                </tr>
+                <tr>
+                    <td>/states/:state</td>
+                    <td>All data for the state URL parameter</td>
+                </tr>
+                <tr>
+                    <td>/states/:state/funfact</td>
+                    <td>A random fun fact for the state URL parameter</td>
+                </tr>
+                <tr>
+                    <td>/states/:state/capital</td>
+                    <td>{ 'state': stateName, 'capital': capitalName }</td>
+                </tr>
+                <tr>
+                    <td>/states/:state/nickname</td>
+                    <td>{ 'state': stateName, 'nickname': nickname }</td>
+                </tr>
+                <tr>
+                    <td>/states/:state/population</td>
+                    <td>{ 'state': stateName, 'population': population }</td>
+                </tr>
+                <tr>
+                    <td>/states/:state/admission</td>
+                    <td>{ 'state': stateName, 'admitted': admissionDate }</td>
+                </tr>
+            </table>
+            <table>
+                <tr>
+                    <th>ROUTE</th>
+                    <th>POST/PATCH/DELETE</th>
+                </tr>
+                <tr>
+                    <td>/states/:state/funfact</td>
+                    <td>The result received from MongoDB</td>
+                </tr>
+            </table>
+            <div id="title">
+                <h1>Quotes API</h1>
+                PHP OOP REST API using PostgreSQL on Render.com<br>
+                <a href="https://github.com/DustinBRiley/BackendWebDev1Midterm" target="_blank">Github</a><br>
+                <a href="https://backendwebdev1midterm.dustinbriley.repl.co/" target="_blank">URL</a><br>
+            </div>
+            <table>
+                <tr>
+                    <th>ROUTE</th>
+                    <th>GET</th>
+                </tr>
+                <tr>
+                    <td>/api/quotes/</td>
+                    <td>All quotes are returned</td>
+                </tr>
+                <tr>
+                    <td>/api/quotes/?id=4</td>
+                    <td>The specific quote</td>
+                </tr>
+                <tr>
+                    <td>/api/quotes/?author_id=10</td>
+                    <td>All quotes from author_id=10</td>
+                </tr>
+                <tr>
+                    <td>/api/quotes/?category_id=8</td>
+                    <td>All quotes in category_id=8</td>
+                </tr>
+                <tr>
+                    <td>/api/quotes/?author_id=3&category_id=4</td>
+                    <td>All quotes from authorId=3 that are in category_id=4</td>
+                </tr>
+                <tr>
+                    <td>/api/authors/</td>
+                    <td>All authors with their id</td>
+                </tr>
+                <tr>
+                    <td>/api/authors/?id=5</td>
+                    <td>The specific author with their id</td>
+                </tr>
+                <tr>
+                    <td>/api/categories/</td>
+                    <td>All categories with their ids (id, category)</td>
+                </tr>
+                <tr>
+                    <td>/api/categories/?id=7</td>
+                    <td>The specific category with its id</td>
+                </tr>
+            </table>
+            <table>
+                <tr>
+                    <th>ROUTE</th>
+                    <th>POST</th>
+                    <th>PUT</th>
+                    <th>DELETE</th>
+                </tr>
+                <tr>
+                    <td>api/quotes/</td>
+                    <td>created quote (id, quote, author_id, category_id)</td>
+                    <td>updated quote (id, quote, author_id, category_id)</td>
+                    <td>id of deleted quote</td>
+                </tr>
+                <tr>
+                    <td>api/authors/</td>
+                    <td>created author (id, author)</td>
+                    <td>updated author (id, author)</td>
+                    <td>id of deleted author</td>
+                </tr>
+                <tr>
+                    <td>api/categories/</td>
+                    <td>created category (id, category)</td>
+                    <td>updated category (id, category)</td>
+                    <td>id of deleted category</td>
+                </tr>
+            </table>
+            <div id="title">
+                <h1>Products API</h1>
+                Python Flask SQLite REST API<br>
+                <a href="https://github.com/DustinBRiley/PythonFlaskAPI" target="_blank">Github</a><br>
+                <a href="https://silken-northern-buffet.glitch.me" target="_blank">URL</a><br>
+            </div>
+            <table>
+                <tr>
+                    <th>ROUTE</th>
+                    <th>GET</th>
+                    <th>POST</th>
+                </tr>
+                <tr>
+                    <td>/product</td>
+                    <td>gets all products</td>
+                    <td>creates new product (name, description, price, quantity JSON object required)</td>
+                </tr>
+            </table>
+            <table>
+                <tr>
+                    <th>ROUTE</th>
+                    <th>GET</th>
+                    <th>PUT</th>
+                    <th>DELETE</th>
+                </tr>
+                <tr>
+                    <td>/product/:id</td>
+                    <td>gets product by ID</td>
+                    <td>updates existing product (name, description, price, quantity JSON object required)</td>
+                    <td>deletes product by id</td>
+                </tr>
+            </table>
+        </div>
     </div>
 </body>
 </html>
