--- a/datastructures.html
+++ b/datastructures.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dustin Riley: Data Structures</title>
+    <title>Dustin Riley</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="index.js" defer></script>
 </head>
 <body>
-    <input type="checkbox" id="toggle">
-    <label for="toggle" id="menu">MENU ≡</label>
-    <label for="toggle" id="menuc">|-></label>
-    <nav>
-        <ul class="pages">
-            <div id="dropdown">
-                <a href="./index.html"><li>PORTFOLIO</li></a>
+    <div id="wrapper">
+        <button onclick="menu()" id="menu">MENU ≡</button>
+        <button onclick="menuc()" id="menuc">X</button>
+        <div id="nav">
+            <a href="./index.html">DUSTIN RILEY</a>
+            <div id="dropdown"><a href="./portfolio.html">PORTFOLIO</a>
                 <div id="dropdown-menu">
                     <a href="./java.html">JAVA</a>
                     <a href="./cpp.html">C++</a>
@@ -28,55 +28,52 @@
                     <a href="./assembly.html">ASSEMBLY</a>
                 </div>
             </div>
-            <a href="./apis.html"><li>APIS</li></a>
-            <a href="./games.html"><li>GAMES</li></a>
-            <a href="./resume.html"><li>RESUME</li></a>
-        </ul>
-        <ul class="icons">
-            <li class="phone"><a href="tel:+13074014917"><img src="./img/phone.png" alt="phone"></a></li>
-            <li class="email"><a href="mailto: dustinrileywork@gmail.com"><img src="./img/email.png" alt="email"></a></li>
-            <li class="git"><a href="https://github.com/dustinbriley" target=”_blank”><img src="./img/github.png" alt="github"></a></li>
-        </ul>
-    </nav>
-    <div id="title">
-        <h1>Data Structures</h1>
-        <table>
-            <tr>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Preview</th>
-            </tr>
-            <tr>
-                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MySorts.java" target="_blank">Sorts</a></td>
-                <td>Insert, Select, Quick, and Merge Sort Algorithms</td>
-                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MySorts.java" target="_blank"><img src="./img/code/ds/sorts.PNG" alt="Sorts"></a></td>
-            </tr>
-            <tr>
-                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MySearches.java" target="_blank">Searches</a></td>
-                <td>Linear and Binary Search Algorithms</td>
-                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MySearches.java" target="_blank"><img src="./img/code/ds/" alt="Searches"></a></td>
-            </tr>
-            <tr>
-                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project2%20(2).zip" target="_blank">Stacks and Queues</a></td>
-                <td>Uses Stack and Queue Algorithms to check if a sentence is a palindrome</td>
-                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project2%20(2).zip" target="_blank"><img src="./img/code/ds/sq.PNG" alt="Stacks and Queues"></a></td>
-            </tr>
-            <tr>
-                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project3.zip" target="_blank">Hash Table</a></td>
-                <td>Hash Table Algorithm</td>
-                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project3.zip" target="_blank"><img src="./img/code/ds/ht.PNG" alt="Hash Table"></a></td>
-            </tr>
-            <tr>
-                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project4.zip" target="_blank">Binary Search Tree</a></td>
-                <td>Binary Search Tree Algorithm</td>
-                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project4.zip" target="_blank"><img src="./img/code/ds/bst.PNG" alt="Binary Search Tree"></a></td>
-            </tr>
-            <tr>
-                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MyGraph.java" target="_blank">Graph</a></td>
-                <td>Graph Algorithm</td>
-                <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MyGraph.java" target="_blank"><img src="./img/code/ds/graph.PNG" alt="Graph"></a></td>
-            </tr>
-        </table>
+            <a href="./apis.html">APIS</a>
+            <a href="./games.html">GAMES</a>
+            <a href="./resume.html">RESUME</a>
+        </div>
+        <div id="toppad"></div>
+        <div id="title">
+            <h1>Data Structures</h1>
+        </div>
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Description</th>
+                    <th>Preview</th>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MySorts.java" target="_blank">Sorts</a></td>
+                    <td>Insert, Select, Quick, and Merge Sort Algorithms</td>
+                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MySorts.java" target="_blank"><img src="./img/code/ds/sorts.PNG" alt="Sorts"></a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MySearches.java" target="_blank">Searches</a></td>
+                    <td>Linear and Binary Search Algorithms</td>
+                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MySearches.java" target="_blank"><img src="./img/code/ds/" alt="Searches"></a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project2%20(2).zip" target="_blank">Stacks and Queues</a></td>
+                    <td>Uses Stack and Queue Algorithms to check if a sentence is a palindrome</td>
+                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project2%20(2).zip" target="_blank"><img src="./img/code/ds/sq.PNG" alt="Stacks and Queues"></a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project3.zip" target="_blank">Hash Table</a></td>
+                    <td>Hash Table Algorithm</td>
+                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project3.zip" target="_blank"><img src="./img/code/ds/ht.PNG" alt="Hash Table"></a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project4.zip" target="_blank">Binary Search Tree</a></td>
+                    <td>Binary Search Tree Algorithm</td>
+                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/project4.zip" target="_blank"><img src="./img/code/ds/bst.PNG" alt="Binary Search Tree"></a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MyGraph.java" target="_blank">Graph</a></td>
+                    <td>Graph Algorithm</td>
+                    <td><a href="https://github.com/DustinBRiley/Data-Structures/blob/main/MyGraph.java" target="_blank"><img src="./img/code/ds/graph.PNG" alt="Graph"></a></td>
+                </tr>
+            </table>
+        </div>
     </div>
 </body>
 </html>
