--- a/htmlcss.html
+++ b/htmlcss.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dustin Riley: HTML & CSS</title>
+    <title>Dustin Riley</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="index.js" defer></script>
 </head>
 <body>
-    <input type="checkbox" id="toggle">
-    <label for="toggle" id="menu">MENU ≡</label>
-    <label for="toggle" id="menuc">|-></label>
-    <nav>
-        <ul class="pages">
-            <div id="dropdown">
-                <a href="./index.html"><li>PORTFOLIO</li></a>
+    <div id="wrapper">
+        <button onclick="menu()" id="menu">MENU ≡</button>
+        <button onclick="menuc()" id="menuc">X</button>
+        <div id="nav">
+            <a href="./index.html">DUSTIN RILEY</a>
+            <div id="dropdown"><a href="./portfolio.html">PORTFOLIO</a>
                 <div id="dropdown-menu">
                     <a href="./java.html">JAVA</a>
                     <a href="./cpp.html">C++</a>
@@ -28,69 +28,66 @@
                     <a href="./assembly.html">ASSEMBLY</a>
                 </div>
             </div>
-            <a href="./apis.html"><li>APIS</li></a>
-            <a href="./games.html"><li>GAMES</li></a>
-            <a href="./resume.html"><li>RESUME</li></a>
-        </ul>
-        <ul class="icons">
-            <li class="phone"><a href="tel:+13074014917"><img src="./img/phone.png" alt="phone"></a></li>
-            <li class="email"><a href="mailto: dustinrileywork@gmail.com"><img src="./img/email.png" alt="email"></a></li>
-            <li class="git"><a href="https://github.com/dustinbriley" target=”_blank”><img src="./img/github.png" alt="github"></a></li>
-        </ul>
-    </nav>
-    <div id="title">
-        <h1>HTML CSS</h1>
-        <table>
-            <tr>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Preview</th>
-            </tr>
-            <tr>
-                <td><a href="https://dbriley.infprojects.fhsu.edu/ch2pacific/" target="_blank">Pacific v1</a></td>
-                <td>Homepage just HTML</td>
-                <td><a href="./img/code/html/1.PNG"><img src="./img/code/html/1.PNG" alt="Preview"></a></td>
-            </tr>
-            <tr>
-                <td><a href="https://dbriley.infprojects.fhsu.edu/ch4pacific/" target="_blank">Pacific v2</a></td>
-                <td>Added CSS background colors</td>
-                <td><a href="./img/code/html/2.PNG"><img src="./img/code/html/2.PNG" alt="Preview"></a></td>
-            </tr>
-            <tr>
-                <td><a href="https://dbriley.infprojects.fhsu.edu/ch5pacific/" target="_blank">Pacific v3</a></td>
-                <td>Added image, list, and colored text</td>
-                <td><a href="./img/code/html/3.PNG"><img src="./img/code/html/3.PNG" alt="Preview"></a></td>
-            </tr>
-            <tr>
-                <td><a href="https://dbriley.infprojects.fhsu.edu/ch7pacific/" target="_blank">Pacific v4</a></td>
-                <td>Added background gradients, navigation, shadows</td>
-                <td><a href="./img/code/html/4.PNG"><img src="./img/code/html/4.PNG" alt="Preview"></a></td>
-            </tr>
-            <tr>
-                <td><a href="https://dbriley.infprojects.fhsu.edu/ch8pacific/" target="_blank">Pacific v5</a></td>
-                <td>Added responsive @media views</td>
-                <td><a href="./img/code/html/5.PNG"><img src="./img/code/html/5.PNG" alt="Preview"></a></td>
-            </tr>
-            <tr>
-                <td><a href="https://dbriley.infprojects.fhsu.edu/ch9pacific/" target="_blank">Pacific v6</a></td>
-                <td>More responsiveness</td>
-                <td><a href="./img/code/html/6.PNG"><img src="./img/code/html/6.PNG" alt="Preview"></a></td>
-            </tr>
-            <tr>
-                <td><a href="https://dbriley.infprojects.fhsu.edu/ch10pacific/" target="_blank">Pacific v7</a></td>
-                <td>Added hover effects, and spacing</td>
-                <td><a href="./img/code/html/7.PNG"><img src="./img/code/html/7.PNG" alt="Preview"></a></td>
-            </tr>
-            <tr>
-                <td><a href="https://dbriley.infprojects.fhsu.edu/ch11pacific/" target="_blank">Pacific v8</a></td>
-                <td>Added tables</td>
-                <td><a href="./img/code/html/8.PNG"><img src="./img/code/html/8.PNG" alt="Preview"></a></td>
-            </tr>
-            <tr>
-                <td><a href="./index.html" target="_blank">Portfolio</a></td>
-                <td>Hey look! You're here already.</td>
-                <td><a href="./img/code/html/p.PNG"><img src="./img/code/html/p.PNG" alt="Preview"></a></td>
-        </table>
+            <a href="./apis.html">APIS</a>
+            <a href="./games.html">GAMES</a>
+            <a href="./resume.html">RESUME</a>
+        </div>
+        <div id="toppad"></div>
+        <div id="title">
+            <h1>HTML CSS</h1>
+        </div>
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Description</th>
+                    <th>Preview</th>
+                </tr>
+                <tr>
+                    <td><a href="https://dbriley.infprojects.fhsu.edu/ch2pacific/" target="_blank">Pacific v1</a></td>
+                    <td>Homepage just HTML</td>
+                    <td><a href="./img/code/html/1.PNG"><img src="./img/code/html/1.PNG" alt="Preview"></a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://dbriley.infprojects.fhsu.edu/ch4pacific/" target="_blank">Pacific v2</a></td>
+                    <td>Added CSS background colors</td>
+                    <td><a href="./img/code/html/2.PNG"><img src="./img/code/html/2.PNG" alt="Preview"></a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://dbriley.infprojects.fhsu.edu/ch5pacific/" target="_blank">Pacific v3</a></td>
+                    <td>Added image, list, and colored text</td>
+                    <td><a href="./img/code/html/3.PNG"><img src="./img/code/html/3.PNG" alt="Preview"></a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://dbriley.infprojects.fhsu.edu/ch7pacific/" target="_blank">Pacific v4</a></td>
+                    <td>Added background gradients, navigation, shadows</td>
+                    <td><a href="./img/code/html/4.PNG"><img src="./img/code/html/4.PNG" alt="Preview"></a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://dbriley.infprojects.fhsu.edu/ch8pacific/" target="_blank">Pacific v5</a></td>
+                    <td>Added responsive @media views</td>
+                    <td><a href="./img/code/html/5.PNG"><img src="./img/code/html/5.PNG" alt="Preview"></a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://dbriley.infprojects.fhsu.edu/ch9pacific/" target="_blank">Pacific v6</a></td>
+                    <td>More responsiveness</td>
+                    <td><a href="./img/code/html/6.PNG"><img src="./img/code/html/6.PNG" alt="Preview"></a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://dbriley.infprojects.fhsu.edu/ch10pacific/" target="_blank">Pacific v7</a></td>
+                    <td>Added hover effects, and spacing</td>
+                    <td><a href="./img/code/html/7.PNG"><img src="./img/code/html/7.PNG" alt="Preview"></a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://dbriley.infprojects.fhsu.edu/ch11pacific/" target="_blank">Pacific v8</a></td>
+                    <td>Added tables</td>
+                    <td><a href="./img/code/html/8.PNG"><img src="./img/code/html/8.PNG" alt="Preview"></a></td>
+                </tr>
+                <tr>
+                    <td><a href="./index.html" target="_blank">Portfolio</a></td>
+                    <td>Hey look! You're here already.</td>
+                    <td><a href="./img/code/html/p.PNG"><img src="./img/code/html/p.PNG" alt="Preview"></a></td>
+            </table>
+        </div>
     </div>
 </body>
 </html>
