--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <script src="index.js" defer></script>
 </head>
 <body>
-    <button onclick="menu()" id="menu">MENU ≡</button>
-    <button onclick="menuc()" id="menuc">X</button>
-    <div id="nav">
-        <ul>
-            <div id="dropdown"><a href="./index.html"><li class="active">PORTFOLIO</li></a>
+    <div id="wrapper">
+        <button onclick="menu()" id="menu">MENU ≡</button>
+        <button onclick="menuc()" id="menuc">X</button>
+        <div id="nav">
+            <a href="./index.html" class="active">DUSTIN RILEY</a>
+            <div id="dropdown"><a href="./portfolio.html">PORTFOLIO</a>
                 <div id="dropdown-menu">
                     <a href="./java.html">JAVA</a>
                     <a href="./cpp.html">C++</a>
@@ -27,13 +28,10 @@
                     <a href="./assembly.html">ASSEMBLY</a>
                 </div>
             </div>
-            <a href="./apis.html"><li>APIS</li></a>
-            <a href="./games.html"><li>GAMES</li></a>
-            <a href="./resume.html"><li>RESUME</li></a>
-        </ul>
-
-    </div>
-    <div>
+            <a href="./apis.html">APIS</a>
+            <a href="./games.html">GAMES</a>
+            <a href="./resume.html">RESUME</a>
+        </div>
         <div id="intro">
             <h1>Dustin Riley</h1>
             <h2>Jr. Software Developer</h2>
@@ -44,63 +42,63 @@
                 <li><a href="./resume.html"><img src="./img/doc.png" id="resume" alt="doc"></a></li>
             </ul>
         </div>
-    </div>
-    <div id="projects">
-        <h1>Top Projects</h1>
-    </div>
-    <div id="sections">
-        <section>
-            <img src="./img/node.png" alt="">
-            <form action="https://github.com/DustinBRiley/BackendWebDev1Final" target="_blank">
-                <button id="git">View on Github</button>
-            </form>
-            <form action="https://conscious-platinum-napkin.glitch.me" target="_blank">
-                <button id="live">View Live Version</button>
-            </form>
-            <p>Node.js API</p>
-            <p>API for states data in JSON file and MongoDB</p>
-        </section>
-        <section>
-            <img src="./games/Capture.PNG" alt="">
-            <form action="https://dustinbriley.itch.io/space-ace-v3" target="_blank">
-                <button id="live">View Live Version</button>
-            </form>
-            <p>Space Ace</p>
-            <p>Top-down space shooter I am making in GODOT</p>
-        </section>
-        <section>
-            <img src="./img/phpapi.png" alt="">
-            <form action="https://github.com/DustinBRiley/BackendWebDev1Midterm" target="_blank">
-                <button id="git">View on Github</button>
-            </form>
-            <form action="https://backendwebdev1midterm.dustinbriley.repl.co/" target="_blank">
-                <button id="live">View Live Version</button>
-            </form>
-            <p>PHP API</p>
-            <p>An API for an online database of famous quotes</p>
-        </section>
-        <section>
-            <img src="./games/Memory.PNG" alt="">
-            <form action="" target="_blank">
-                <button id="git">View on Github</button>
-            </form>
-            <form action="" target="_blank">
-                <button id="live">View Live Version</button>
-            </form>
-            <p>Memory</p>
-            <p>Python memory game with bruteforce protection</p>
-        </section>
-        <section>
-            <img src="./img/flask.png" alt="">
-            <form action="https://github.com/DustinBRiley/PythonFlaskAPI" target="_blank">
-                <button id="git">View on Github</button>
-            </form>
-            <form action="https://silken-northern-buffet.glitch.me" target="_blank">
-                <button id="live">View Live Version</button>
-            </form>
-            <p>Python Flask API</p>
-            <p>Simple API of products</p>
-        </section>
+        <div id="projects">
+            <h1>Top Projects</h1>
+        </div>
+        <div id="sections">
+            <section>
+                <img src="./img/node.png" alt="">
+                <form action="https://github.com/DustinBRiley/BackendWebDev1Final" target="_blank">
+                    <button id="git">View on Github</button>
+                </form>
+                <form action="https://conscious-platinum-napkin.glitch.me" target="_blank">
+                    <button id="live">View Live Version</button>
+                </form>
+                <p>Node.js API</p>
+                <p>API for states data in JSON file and MongoDB</p>
+            </section>
+            <section>
+                <img src="./games/Capture.PNG" alt="">
+                <form action="https://dustinbriley.itch.io/space-ace-v3" target="_blank">
+                    <button id="live">View Live Version</button>
+                </form>
+                <p>Space Ace</p>
+                <p>Top-down space shooter I am making in GODOT</p>
+            </section>
+            <section>
+                <img src="./img/phpapi.png" alt="">
+                <form action="https://github.com/DustinBRiley/BackendWebDev1Midterm" target="_blank">
+                    <button id="git">View on Github</button>
+                </form>
+                <form action="https://backendwebdev1midterm.dustinbriley.repl.co/" target="_blank">
+                    <button id="live">View Live Version</button>
+                </form>
+                <p>PHP API</p>
+                <p>An API for an online database of famous quotes</p>
+            </section>
+            <section>
+                <img src="./games/Memory.PNG" alt="">
+                <form action="" target="_blank">
+                    <button id="git">View on Github</button>
+                </form>
+                <form action="" target="_blank">
+                    <button id="live">View Live Version</button>
+                </form>
+                <p>Memory</p>
+                <p>Python memory game with bruteforce protection</p>
+            </section>
+            <section>
+                <img src="./img/flask.png" alt="">
+                <form action="https://github.com/DustinBRiley/PythonFlaskAPI" target="_blank">
+                    <button id="git">View on Github</button>
+                </form>
+                <form action="https://silken-northern-buffet.glitch.me" target="_blank">
+                    <button id="live">View Live Version</button>
+                </form>
+                <p>Python Flask API</p>
+                <p>Simple API of products</p>
+            </section>
+        </div>
     </div>
 </body>
 </html>
